--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,7 @@ header {
     padding: 10px 20px 10px 20px;
     display: flex;
     align-items: center;
+    width: 100vw;
 }
 
 .header-container {
@@ -62,7 +63,7 @@ header {
     position: center;
 }
 
-/* INFORMACOES */
+/* ARTIGOS */
 #produtos {
     display: flex;
     flex-direction: column;
@@ -80,17 +81,15 @@ header {
 }
 
 #imagem-marvel img {
-    width: 100%;
     height: auto;
     border-radius: 40%;
-    max-width: 250px;
+    width: 250px;
 }
 
 #imagem-dc img {
-    width: 100%;
     height: auto;
     border-radius: 200px;
-    max-width: 400px;
+    width: 400px;
 }
 
 .fundo-artigo {
@@ -100,8 +99,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20000px;
-    max-width: 320px;
+    width: 320px;
 }
 
 .fundo-artigo h2 {
@@ -113,4 +111,33 @@ header {
 .fundo-artigo p {
     font-family: "Montserrat", sans-serif;
     font-size: 2vh;
+}
+
+/* FOOTER */
+footer {
+    width: 100%;
+    height: 140px;
+    background-color: #96305A;
+    display: flex;
+    justify-content: center;
+}
+
+.footer {
+    height: 90%;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.contatos {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.footer small {
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
 }
